# backend-i

./: README sessions.md
backend_i_django/: manage.py
backend_i_django/backend_i_django/: asgi.py  settings.py  urls.py  wsgi.py
backend_i_django/meetings/: admin.py  models.py
backend_i_django/meetings/management/commands/: setup_groups.py
backend_i_django/meetings/migrations/: 0001_initial.py
meeting-note-assistant/: pyproject.toml
meeting-note-assistant/app/: cli.py
meeting-note-assistant/app/api/: main.py  schemas.py
meeting-note-assistant/app/core/: __init__.py  dependencies.py  exceptions.py  validators.py
meeting-note-assistant/app/domain/: __init__.py  models.py
meeting-note-assistant/app/services/: __init__.py  meeting_service.py
meeting-note-assistant/app/storage/: __init__.py  base.py  json_repository.py  memory.py
meeting-note-assistant/data/: meetings.json
meeting-note-assistant/tests/: conftest.py  test_meetings.py
screenshot_cleaner/: main.py  pyproject.toml
screenshot_cleaner/src/: cli.py  data.py  logic.py
