[project]
name = "screenshot-cleaner"
version = "0.1.0"
description = "A CLI tool to organize screenshots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.24.1",
]

[project.scripts]
# This line maps the command 'screenshot-cleaner' to your app
screenshot-cleaner = "src.cli:app"